--- a/Cuando Juega Boquita.html
+++ b/Cuando Juega Boquita.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="file:///home/tejon/TejonTech/Tutorials%20&amp;%20Proyects/Countdown2/icon.ico">
-    <link rel="apple-touch-icon" sizes="57x57" href="file:///Countdown2/images/icon.ico">
+    <link rel="apple-touch-icon" sizes="57x57" href="/Countdown2/images/apple-icon-57x57.png" />
+<link rel="apple-touch-icon" sizes="72x72" href="./images/apple_touch_icon_72x72.png" />
+<link rel="apple-touch-icon" sizes="114x114" href="./images/apple_touch_icon_114x114.png" />
+<link rel="apple-touch-icon" sizes="120x120" href="./images/apple_touch_icon_120x120.png" />
+<link rel="apple-touch-icon" sizes="152x152" href="./images/apple_touch_icon_152x152.png" />
+<link rel="apple-touch-icon" sizes="180x180" href="./images/apple_touch_icon_180x180.png" />
     <link rel="icon" type="img/png" sizes="16x16" href="file:///Countdown2/images/icon.ico">
     <link rel="icon" type="img/png" sizes="32x32" href="file:///Countdown2/images/icon.ico">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
