--- a/Cuando Juega Boquita.html
+++ b/Cuando Juega Boquita.html
@@ -1,24 +1,64 @@
 <!DOCTYPE html>
-<html lang="en"><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="file:///home/tejon/TejonTech/Tutorials%20&amp;%20Proyects/Countdown2/icon.ico">
-    <link rel="apple-touch-icon" sizes="57x57" href="/Countdown2/images/apple-icon-57x57.png" />
-<link rel="apple-touch-icon" sizes="72x72" href="./images/apple_touch_icon_72x72.png" />
-<link rel="apple-touch-icon" sizes="114x114" href="./images/apple_touch_icon_114x114.png" />
-<link rel="apple-touch-icon" sizes="120x120" href="./images/apple_touch_icon_120x120.png" />
-<link rel="apple-touch-icon" sizes="152x152" href="./images/apple_touch_icon_152x152.png" />
-<link rel="apple-touch-icon" sizes="180x180" href="./images/apple_touch_icon_180x180.png" />
-    <link rel="icon" type="img/png" sizes="16x16" href="file:///Countdown2/images/icon.ico">
-    <link rel="icon" type="img/png" sizes="32x32" href="file:///Countdown2/images/icon.ico">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<html lang="en">
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      href="file:///home/tejon/TejonTech/Tutorials%20&amp;%20Proyects/Countdown2/icon.ico"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="/Countdown2/images/apple-icon-57x57.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="./images/apple_touch_icon_72x72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="./images/apple_touch_icon_114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="./images/apple_touch_icon_120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="./images/apple_touch_icon_152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./images/apple_touch_icon_180x180.png"
+    />
+    <link
+      rel="icon"
+      type="img/png"
+      sizes="16x16"
+      href="file:///Countdown2/images/icon.ico"
+    />
+    <link
+      rel="icon"
+      type="img/png"
+      sizes="32x32"
+      href="file:///Countdown2/images/icon.ico"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Cuando Juega Boquita</title>
-    <link rel="stylesheet" href="Cuando%20Juega%20Boquita_archivos/style.css">
+    <link rel="stylesheet" href="Cuando%20Juega%20Boquita_archivos/style.css" />
   </head>
   <body data-new-gr-c-s-check-loaded="8.927.0" data-gr-ext-installed="">
     <div class="mark">
-      <a class="mark-p" href="https://twitter.com/TejonusTejonus">By Tejon 🦡❤️</a>
+      <a class="mark-p" href="https://twitter.com/TejonusTejonus"
+        >By Tejon 🦡❤️</a
+      >
     </div>
     <section class="comming-soon">
       <div>
@@ -44,14 +84,17 @@
         <div class="container-data">
           <div class="container-rival">
             <span class="tournament">Liga Argentina </span>
-            <span class="rival">vs Union
-              <img src="./images/union.png" class="logovs">
+            <span class="rival"
+              >vs Union
+              <img src="./images/union.png" class="logovs" />
             </span>
           </div>
         </div>
       </div>
     </section>
     <script src="Cuando%20Juega%20Boquita_archivos/app.js"></script>
-  
-
-</body><grammarly-desktop-integration data-grammarly-shadow-root="true"></grammarly-desktop-integration></html>
+  </body>
+  <grammarly-desktop-integration
+    data-grammarly-shadow-root="true"
+  ></grammarly-desktop-integration>
+</html>
