--- a/Cuando Juega Boquita.html
+++ b/Cuando Juega Boquita.html
@@ -83,9 +83,9 @@
         </div>
         <div class="container-data">
           <div class="container-rival">
-            <span class="tournament">Liga Argentina </span>
+            <span class="tournament">Liga Argentinaa </span>
             <span class="rival"
-              >vs Union (Sta Fe)
+              >vs Deportivo palomita
               <img src="./images/union.png" class="logovs" />
             </span>
           </div>
