changes for union match

--- a/index.html
+++ b/index.html
@@ -1,71 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="icon.ico" />
-   <!-- <link rel="apple-touch-icon" sizes="57x57" href="/Countdown2/images/icon.ico" />
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="icon.ico" />
+  <!-- <link rel="apple-touch-icon" sizes="57x57" href="/Countdown2/images/icon.ico" />
     <link rel="icon" type="img/png" sizes="16x16" href="/Countdown2/images/icon.ico" />
     <link rel="icon" type="img/png" sizes="32x32" href="/Countdown2/images/icon.ico" />-->
-    <!-- Favicon for Browsers -->
-<link rel="icon" href="/Countdown2/images/favicon.ico" sizes="any" type="image/x-icon" />
+  <!-- Favicon for Browsers -->
+  <link rel="icon" href="/Countdown2/images/favicon.ico" sizes="any" type="image/x-icon" />
 
-<!-- Apple Touch Icon for iOS Devices -->
-<link rel="apple-touch-icon" sizes="57x57" href="/Countdown2/images/apple-icon-57x57.png" />
-<link rel="apple-touch-icon" sizes="72x72" href="/Countdown2/images/apple-icon-72x72.png" />
-<link rel="apple-touch-icon" sizes="114x114" href="/Countdown2/images/apple-icon-114x114.png" />
-<link rel="apple-touch-icon" sizes="120x120" href="/Countdown2/images/apple-icon-120x120.png" />
-<link rel="apple-touch-icon" sizes="152x152" href="/Countdown2/images/apple-icon-152x152.png" />
-<link rel="apple-touch-icon" sizes="180x180" href="/Countdown2/images/apple-icon-180x180.png" />
+  <!-- Apple Touch Icon for iOS Devices -->
+  <link rel="apple-touch-icon" sizes="57x57" href="/Countdown2/images/apple-icon-57x57.png" />
+  <link rel="apple-touch-icon" sizes="72x72" href="/Countdown2/images/apple-icon-72x72.png" />
+  <link rel="apple-touch-icon" sizes="114x114" href="/Countdown2/images/apple-icon-114x114.png" />
+  <link rel="apple-touch-icon" sizes="120x120" href="/Countdown2/images/apple-icon-120x120.png" />
+  <link rel="apple-touch-icon" sizes="152x152" href="/Countdown2/images/apple-icon-152x152.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/Countdown2/images/apple-icon-180x180.png" />
 
-<!-- PNG Icons for Browsers -->
-<link rel="icon" type="image/png" sizes="16x16" href="./images/icon_16x16.png" />
-<link rel="icon" type="image/png" sizes="32x32" href="./images/icon_32x32.png" />
-<link rel="icon" type="image/png" sizes="96x96" href="./images/icon_96x96.png" />
-<link rel="icon" type="image/png" sizes="192x192" href="./images/icon_192x192.png" />
+  <!-- PNG Icons for Browsers -->
+  <link rel="icon" type="image/png" sizes="16x16" href="./images/icon_16x16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/icon_32x32.png" />
+  <link rel="icon" type="image/png" sizes="96x96" href="./images/icon_96x96.png" />
+  <link rel="icon" type="image/png" sizes="192x192" href="./images/icon_192x192.png" />
 
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Cuando Juega Boquita</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="mark">
-      <a class="mark-p" href="https://twitter.com/TejonusTejonus"
-        >By Tejon 🦡❤️</a
-      >
-    </div>
-    <section class="comming-soon">
-      <div>
-        <h2>Cuando Juega Boquita</h2>
-        <div class="countdown">
-          <div class="container-day">
-            <div class="day">B</div>
-            <h3>Dias</h3>
-          </div>
-          <div class="container-hour">
-            <div class="hour">O</div>
-            <h3>Horas</h3>
-          </div>
-          <div class="cointainer-minute">
-            <div class="minute">C</div>
-            <h3>Minutos</h3>
-          </div>
-          <div class="container-seconds">
-            <div class="second">A</div>
-            <h3>Segundos</h3>
-          </div>
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Cuando Juega Boquita</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <div class="mark">
+    <a class="mark-p" href="https://twitter.com/TejonusTejonus">By Tejon 🦡❤️</a>
+  </div>
+  <section class="comming-soon">
+    <div>
+      <h2>Cuando Juega Boquita</h2>
+      <div class="countdown">
+        <div class="container-day">
+          <div class="day">B</div>
+          <h3>Dias</h3>
         </div>
-        <div class="container-data">
-          <div class="container-rival">
-            <span class="tournament">Liga Argentina </span>
-            <span class="rival"
-              >vs Argentinos Jrs 
-              <img src="./images/Asociacion_Atletica_Argentinos_Juniors.svg.png" class="logovs" />
-            </span>
-          </div>
+        <div class="container-hour">
+          <div class="hour">O</div>
+          <h3>Horas</h3>
+        </div>
+        <div class="cointainer-minute">
+          <div class="minute">C</div>
+          <h3>Minutos</h3>
+        </div>
+        <div class="container-seconds">
+          <div class="second">A</div>
+          <h3>Segundos</h3>
         </div>
       </div>
-    </section>
-    <script src="app.js"></script>
-  </body>
+      <div class="container-data">
+        <div class="container-rival">
+          <span class="tournament">Liga Argentina </span>
+          <span class="rival">vs Union
+            <img src="./images/union.png" class="logovs" />
+          </span>
+        </div>
+      </div>
+    </div>
+  </section>
+  <script src="app.js"></script>
+</body>
+
 </html>
