--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </div>
   <section class="comming-soon">
     <div>
-      <h2>Cuando Juega Boquita</h2>
+      <h2>Cuando Viajamos</h2>
       <div class="countdown">
         <div class="container-day">
           <div class="day">B</div>
@@ -57,9 +57,8 @@
       </div>
       <div class="container-data">
         <div class="container-rival">
-          <span class="tournament">Liga Argentina </span>
-          <span class="rival">vs Union
-            <img src="./images/union.png" class="logovs" />
+          <span class="tournament">Destino </span>
+          <span class="rival">Bariloche 🏔️
           </span>
         </div>
       </div>
